--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JCAI Demo Agent | JCIT Services</title>
+  <title>JCAI Demo Salon | JCIT Services</title>
 
   <style>
     body {
@@ -74,25 +74,19 @@
 
 <body>
   <div class="container">
-    <span class="badge">Demo AI Agent</span>
+    <span class="badge">Demo Page</span>
 
-    <h1>JCAI Demo Salon – AI Agent</h1>
-    <h2>Powered by JCIT Services</h2>
+    <h1>JCAI Demo Salon</h1>
+    <h2>Built by JCIT Services</h2>
 
     <div class="card">
       <p>
-        This page showcases a <strong>demo AI salon assistant</strong> built using
-        <strong>Retell AI</strong>.  
-        The agent can answer inquiries, simulate appointment booking, and chat in natural Taglish.
-      </p>
-
-      <p>
-        ⚠️ <strong>Note:</strong> This is a demo agent only.  
-        No real appointments or calendar integrations are connected.
+        This page showcases a <strong>demo AI salon assistant experience</strong> created by <strong>JCIT Services</strong>.  
+        It is a <strong>demo agent</strong> for presentation purposes—no live chat or appointment system is currently active.
       </p>
 
       <div class="contact">
-        <strong>Interested in your own AI agent?</strong>
+        <strong>Interested in your own AI agent or tech solutions?</strong>
         Contact <strong>Jay – JCIT Services</strong><br />
         📧 jayconcha9@gmail.com<br />
         📞 0916-525-7683
@@ -100,28 +94,8 @@
     </div>
 
     <footer>
-      © 2025 JCIT Services · AI Demo Experience
+      © 2025 JCIT Services · Demo Experience
     </footer>
   </div>
-
-  <!-- RETELL AI WIDGET -->
-  <script
-    id="retell-widget"
-    src="https://dashboard.retellai.com/retell-widget.js"
-    type="module"
-    data-public-key="public_key_0b7796c09905009f2051b"
-    data-agent-id="agent_e282308196d235afb8859289b4"
-    data-agent-version="v1demo"
-    data-title="JCAI Demo Salon – AI Agent"
-    data-logo-url=""
-    data-color="#ff5fa2"
-    data-bot-name="Jane"
-    data-popup-message="Hi babes! 💕 Chat with Jane, our demo AI salon assistant ✨"
-    data-show-ai-popup="true"
-    data-show-ai-popup-time="5"
-    data-auto-open="false"
-    data-dynamic='{"demo": "true"}'
-  ></script>
-
 </body>
 </html>
