--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
   <div class="container">
-    <span class="badge">Demo Page</span>
+    <span class="badge">Demo Agent</span>
 
     <h1>JCAI Demo Salon</h1>
     <h2>Built by JCIT Services</h2>
@@ -82,7 +82,11 @@
     <div class="card">
       <p>
         This page showcases a <strong>demo AI salon assistant experience</strong> created by <strong>JCIT Services</strong>.  
-        It is a <strong>demo agent</strong> for presentation purposes—no live chat or appointment system is currently active.
+        The agent simulates answering questions, giving service information, and booking appointments.
+      </p>
+
+      <p>
+        ⚠️ <strong>Note:</strong> This is a demo agent only—no real appointments are booked.
       </p>
 
       <div class="contact">
@@ -97,5 +101,25 @@
       © 2025 JCIT Services · Demo Experience
     </footer>
   </div>
+
+  <!-- JC IT Services Demo AI Widget -->
+  <script
+    id="retell-widget"
+    src="https://dashboard.retellai.com/retell-widget.js"
+    type="module"
+    data-public-key="public_key_0b7796c09905009f2051b"
+    data-agent-id="agent_e282308196d235afb8859289b4"
+    data-agent-version="v1demo"
+    data-title="JCAI Demo Salon – AI Agent"
+    data-bot-name="Jane"
+    data-logo-url=""
+    data-color="#ff5fa2"
+    data-popup-message="Hi babes! 💕 I’m Jane, your chic AI salon assistant. This is a demo experience—pero I can show you how booking works ✨"
+    data-show-ai-popup="true"
+    data-show-ai-popup-time="1"
+    data-auto-open="true"
+    data-dynamic='{"demo": "true"}'
+  ></script>
+
 </body>
 </html>
